Pagination for all gets that returns a list. Page Size is 3.
